--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,18 @@
+html {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  box-sizing: inherit;
+}
 body {
   font-family: sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -20,6 +33,7 @@ form div {
   display: inline-block;
 }
 
+/* Testing styles */
 span.tile0 {
   background-color: grey;
   padding: 0 5px;
