--- a/public/style.css
+++ b/public/style.css
@@ -10,12 +10,6 @@ html {
   box-sizing: inherit;
 }
 body {
-  /* font-family: sans-serif;
-  margin: 0;
-  padding: 0;
-  background-image: url('./assets/Galaxy-Photo.jpg');
-  background-size: cover; */
-
   height: 100%;
   color: #ffffff;
   font-size: 1em;
@@ -111,7 +105,7 @@ span.tile8 {
   top: 22%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 17vh;
+  font-size: 18vh;
   text-align: center;
   letter-spacing: 10px;
   font-weight: lighter;
@@ -140,7 +134,17 @@ span.tile8 {
   transform: translate(-50%, -50%);
   font-size: 2.8vh;
   text-align: center;
-  /* letter-spacing: 10px; */
   font-weight: lighter;
   font-style: italic;
+}
+
+#github {
+  font-size: 2vh;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 95%;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  text-align: center;
 }
