--- a/public/style.css
+++ b/public/style.css
@@ -138,13 +138,13 @@ span.tile8 {
   font-style: italic;
 }
 
-#github {
-  font-size: 2vh;
+#about-page {
+  font-family: sans-serif;
   position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 95%;
+  top: 20%;
   left: 50%;
-  transform: translate(-50%, 0%);
+  transform: translate(-50%, -50%);
+  font-size: 2.8vh;
   text-align: center;
+  /* font-weight: lighter; */
 }
