--- a/public/style.css
+++ b/public/style.css
@@ -16,7 +16,7 @@ body {
   font-family: Audiowide, cursive, sans-serif;
   overflow: hidden;
 
-  background: url('./images/bg-1.jpg') no-repeat top center fixed;
+  background: url('./images/bg-7.jpg') no-repeat top center fixed;
   background-size: cover;
 }
 
@@ -138,7 +138,8 @@ span.tile8 {
   font-style: italic;
 }
 
-#about-page {
+/* #about-info {
+  color: black;
   font-family: sans-serif;
   position: fixed;
   top: 20%;
@@ -146,5 +147,14 @@ span.tile8 {
   transform: translate(-50%, -50%);
   font-size: 2.8vh;
   text-align: center;
-  /* font-weight: lighter; */
+  background: #ffffff;
+} */
+
+.control-panel-button {
+  margin: 0px;
+  top: auto;
+  right: 20px;
+  bottom: 20px;
+  left: auto;
+  position: fixed;
 }
