--- a/public/style.css
+++ b/public/style.css
@@ -59,13 +59,6 @@ span.tile8 {
   text-align: center;
 }
 
-/* background-color: white;
-  opacity: 0.5;
-  margin-left: 40vw;
-  margin-right: 40vw;
-  border-radius: 15px;
-  min-width: 240px;
-  font-size: 4vh; */
 #name {
   font-weight: bold;
   color: white;
@@ -150,16 +143,25 @@ span.tile8 {
   background: #ffffff;
 } */
 
-.control-panel-button {
-  margin: 0px;
-  top: auto;
-  right: 20px;
-  bottom: 20px;
-  left: auto;
-  position: fixed;
+.control-panel {
+  vertical-align: middle;
+  text-align: center;
+
+  /* position: fixed;
+  top: 50%;
+  left: 50%; */
+  /* transform: translate(-50%, -50%); */
 }
 
-footer {
-  margin-top: calc(5% + 400px);
-  bottom: 0;
-}
+/* footer {
+  margin-top: calc(5% + 420px);
+} */
+
+/* .control-panel-button {
+  vertical-align: middle;
+  text-align: center;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+} */
