--- a/public/style.css
+++ b/public/style.css
@@ -108,7 +108,7 @@ span.tile8 {
   color: white;
   font-family: sans-serif;
   position: fixed;
-  top: 10%;
+  top: 15%;
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 3vh;
@@ -122,7 +122,7 @@ span.tile8 {
   color: white;
   font-family: sans-serif;
   position: fixed;
-  top: 15%;
+  top: 20%;
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 2.8vh;
@@ -131,13 +131,14 @@ span.tile8 {
   font-style: italic;
 }
 
-#control-panel {
+.control-panel {
   width: 500px;
+  left: 30%;
   /* vertical-align: middle;
   text-align: center;
   position: fixed;
   top: 50%;
-  left: 50%;
+
   transform: translate(-50%, -50%); */
   display: flex;
   justify-content: space-evenly;
