--- a/public/style.css
+++ b/public/style.css
@@ -117,6 +117,7 @@ span.tile8 {
 }
 
 #gh-quote1 {
+  font-family: 'PT Sans Narrow';
   top: 15%;
   left: 50%;
   font-size: 3vh;
@@ -124,6 +125,8 @@ span.tile8 {
 }
 
 #gh-quote2 {
+  font-family: 'PT Sans Narrow';
+
   top: 20%;
   left: 50%;
   font-size: 2.8vh;
